correction contraste

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ button {
     outline: none!important;
 }
 
+
+
 a:hover {
     text-decoration: none;
     cursor: pointer;
@@ -290,7 +292,8 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 4em;
+    font-weight: 700;
 }
 
 .navbar {
@@ -699,7 +702,7 @@ a {
 }
 
 p {
-    font-size: 1em;
+    font-size: 1.2em;
 }
 
 .tight-width-whitespace {
@@ -791,11 +794,11 @@ h4 {
 }
 
 .bgc-dark-slate-blue {
-    /* background-color: #364577; */
+    /* background-color: #364577;  */
 }
 
 .bgc-atomic-tangerine {
-    background-color:#c0653e;
+    background-color:#b64b1d;
 }
 
 .tc-white {
@@ -803,7 +806,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background-color:#c0653e;
+    background-color:#b64b1d;
     color: #FFFFFF!important;
 }
 
@@ -834,7 +837,7 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    /* background-image: url("img/dots-bg.png"); */
 }
 
 .bg-lines-h2-bg {
